fix header spacing

--- a/wp-content/themes/liquorlicenseadvisor/site.css
+++ b/wp-content/themes/liquorlicenseadvisor/site.css
@@ -499,7 +499,7 @@ font-size: 140%;
   font-weight: 400;
   color: black;
   float: left;
-  padding-left: 13%;
+  padding-left: 16%;
   font-size: 150%;
 }
 
